--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,17 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
+  "extends": ["config:recommended"],
+  "labels": ["dependencies"],
+  "prConcurrentLimit": 0,
+  "prHourlyLimit": 0,
+  "packageRules": [
+    {
+      "matchCategories": ["docker"],
+      "addLabels": ["docker"]
+    },
+    {
+      "matchCategories": ["ci"],
+      "addLabels": ["ci"]
+    }
   ]
 }
